# UDA

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Copyright.txt  LICENCE.txt  LICENSE.txt  README.md  pyproject.toml
extlib/portablexdr-4.9.1/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  byteswap.h  config.h.in  configure  configure.ac  rpcgen_ast.c  rpcgen_codegen.c  rpcgen_int.h  rpcgen_main.c  rpcgen_parse.c  rpcgen_parse.h  rpcgen_parse.y  rpcgen_scan.c  rpcgen_scan.l  xdr.c  xdr_array.c  xdr_float.c  xdr_intXX_t.c  xdr_mem.c  xdr_rec.c  xdr_reference.c  xdr_stdio.c
source/: CMakeLists.txt  Doxyfile  uda.h  version.h.in
source/authentication/: CMakeLists.txt  client_ssl.cpp  client_ssl.h  oauth_authentication.cpp  oauth_authentication.h  server_ssl.cpp  server_ssl.h  udaClientSSL.c  udaClientSSL.cpp  udaClientSSL.h  udaClientServerSSL.c  udaSSL.c  udaSSL.h  udaServerSSL.c  udaServerSSL.cpp  udaServerSSL.h  updateSelectParms.cpp  updateSelectParms.h  update_select_params.cpp  utils.cpp  utils.h
source/c_api/: CMakeLists.txt  accAPI.cpp  clientAPI.cpp  clientMDS.cpp  udaGetAPI.cpp  udaPutAPI.cpp
source/c_api2/: CMakeLists.txt  accAPI.cpp  udaGetAPI.cpp  udaPutAPI.cpp  udaStructured.cpp
source/cache/: CMakeLists.txt  cache.c  cache.cpp  cache.h  fileCache.c  fileCache.cpp  fileCache.h  idamCache.c  idamCache.h  idamFileCache.c  idamFileCache.h  memcache.cpp  memcache.h  memcache.hpp
source/client/: CMakeLists.txt  ClientAPI.c  ClientAPI.h  ClientMDS.c  ClientMDS.h  IdamAPI.c  IdamAPI.h  Readin.c  Readin.h  UpdateSelectParms.c  UpdateSelectParms.h  Writeout.c  Writeout.h  accAPI.c  accAPI.cpp  accAPI.h  accAPI_C.c  accAPI_C.h  accAPI_CL.c  accAPI_F.c  accAPI_F.h  accAPI_FL.c  accAPI_Gen.c  accAPI_Gen.h  accAPI_Java.c  accAPI_XML.c  clientAPI.c  clientAPI.cpp  clientAPI.h  clientMDS.c  clientMDS.cpp  clientMDS.h  clientXDRStream.c  clientXDRStream.cpp  clientXDRStream.h  client_config.cpp  client_config.h  client_logging.cpp  client_logging.h  closeClientSockets.c  (+57 more)
source/client2/: CMakeLists.txt  accAPI.cpp  accAPI.h  client.cpp  client.hpp  client_environment.cpp  client_environment.hpp  client_xdr_stream.cpp  client_xdr_stream.hpp  closedown.cpp  closedown.hpp  connection.cpp  connection.hpp  error_codes.h  exceptions.hpp  generateErrors.cpp  generate_errors.cpp  generate_errors.hpp  handle.cpp  handle.h  handle.hpp  host_list.cpp  host_list.hpp  make_request_block.cpp  make_request_block.hpp  thread_client.cpp  thread_client.hpp  udaGetAPI.cpp  udaGetAPI.h  udaPutAPI.cpp  udaPutAPI.h  updateSelectParms.cpp  updateSelectParms.h  windows_defines.hpp
source/clientserver/: CMakeLists.txt  TrimString.c  TrimString.h  allocData.c  allocData.cpp  allocData.h  allocXMLData.c  allocXMLData.cpp  allocXMLData.h  alloc_data.cpp  alloc_data.h  compressDim.c  compressDim.cpp  compressDim.h  compress_dim.cpp  compress_dim.h  copyStructs.c  copyStructs.cpp  copyStructs.h  copy_structs.cpp  copy_structs.h  errorLog.c  errorLog.cpp  errorLog.h  error_log.cpp  error_log.h  expand_path.c  expand_path.cpp  expand_path.h  filesystemUtils.cpp  filesystemUtils.h  freeDataBlock.c  freeDataBlock.cpp  freeDataBlock.h  idamDefines.h  idamErrorLog.c  idamErrorLog.h  idamErrors.h  idamSecurity.h  idamStructs.h  (+107 more)
source/common/: CMakeLists.txt  stringUtils.cpp  stringUtils.h  string_utils.cpp  string_utils.h  uda_env_options.hpp  uuid.hpp
source/config/: CMakeLists.txt  config.cpp  config.h
source/etc/: README.md.in  launchd.udaserver.plist.in  module.in  rc.uda.in  test_plugin.cpp.in  uda-client.pc.in  uda-cpp.pc.in  uda-fat-client.pc.in  uda-fat-cpp.pc.in  uda-plugins.pc.in  uda.plist.in  uda.socket.in  uda@.service.in  uda_server.toml.in  udagenstruct.conf  udaserver.cfg.in  udaserver.sh.in  xinetd.conf.in
source/include/: accAPI.h  accessors.h  client.h  clientAPI.h  clientMDS.h  errorLog.h  export.h  genStructs.h  idamclient.h  idamclientconfig.h  idamclientprivate.h  idamclientpublic.h  idamclientserver.h  idamclientserverprivate.h  idamclientserverpublic.h  idamclientserverxml.h  idamdlm.h  idamgenstruct.h  idamgenstructprivate.h  idamgenstructpublic.h  idamgenstructtest.h  idammatlab.h  idamplugin.h  idampluginfiles.h  idamproxy.h  idamscheduler.h  idamsecurity.h  idamserver.h  idamserverfiles.h  idamtypes.h  initStructs.h  legacy.h  logging.h  mastCPF.h  parseEfitXMLPrivate.h  parseEfitXMLPublic.h  parseEfitXMLPublicString.h  pluginStructs.h  random.h  read_data.h  (+10 more)
source/logging/: CMakeLists.txt  accessLog.c  accessLog.cpp  accessLog.h  access_log.cpp  fileLogging.c  fileLogging.cpp  idamAccessLog.c  idamAccessLog.h  idamLog.c  idamLog.h  logging.c  logging.cpp  logging.h  sysLogging.c  sysLogging.cpp
source/plugins/: CMakeLists.txt  idamPlugin.h  idamPluginFiles.h  managePluginFiles.cpp  managePluginFiles.h  pluginStructs.h  pluginUtils.c  pluginUtils.cpp  pluginUtils.h  plugin_api.cpp  serverPlugin.c  serverPlugin.h  udaPlugin.c  udaPlugin.cpp  udaPlugin.h  udaPluginFiles.h  uda_plugin_base.cpp  uda_plugin_base.hpp  utils.cpp  utils.h
source/protocol/: CMakeLists.txt  alloc_data.cpp  alloc_data.h  connection.cpp  connection.hpp  protocol.cpp  protocol.h  protocol2.cpp  protocolXML.cpp  protocolXML.h  protocolXML2.cpp  protocolXML2.h  protocolXML2Put.cpp  protocolXML2Put.h  protocol_xml.cpp  protocol_xml.h  protocol_xml_put.cpp  protocol_xml_put.h  readXDRFile.cpp  read_xdr_file.cpp  (+7 more)
test/: .gitignore  CMakeLists.txt  CMakeLists.txt.old  build-python3.sh  catch.hpp  idamTest.conf  run_test.c  run_test.sh  server_tests.cpp  setup.inc.in  setupEnvironment.inc.in  setupenv.sh  test0.cpp  test1.cpp  test3.cpp  testCert.c  testSecurity.c  test_clientserver.cpp  test_develop.cpp  test_ece_develop.cpp  test_hdf5.cpp  test_help.cpp  test_helpers.cpp  test_helpers.h  test_imas.cpp  test_imas2.cpp  test_imas4.cpp  test_imas_jet.cpp  test_imas_jet_all.cpp  test_interfero.cpp  test_mast.cpp  test_pf_active.cpp  test_pf_passive.cpp  test_putcpp.cpp  test_putdata.cpp  test_server.toml  unittests.cpp
(+1243 files in other folders)
