add_subdirectory( authentication )
add_subdirectory( bin )
#add_subdirectory( c_api )
add_subdirectory( c_api2 )
add_subdirectory( cache )
#add_subdirectory( client )
add_subdirectory( client2 )
add_subdirectory( clientserver )
add_subdirectory( common )
add_subdirectory( config )
add_subdirectory( logging )
add_subdirectory( plugins )
add_subdirectory( protocol )
add_subdirectory( serialisation )
#add_subdirectory( server )
add_subdirectory( server2 )
add_subdirectory( structures )
add_subdirectory( wrappers )